--- a/README
+++ b/README
@@ -1,20 +1,13 @@
-
 #  How to use OpenCASCADE Technology on Android 
 # 
-#  Open CASCADE Technology is a software development platform freely available in open source. 
+#  Open CASCADE Technology is a software development platform 
+#  freely available in open source. 
 #  It includes components for 3D surface and solid modeling, visualization, 
 #  data exchange and rapid application development.
 #  Open CASCADE Technology can be best applied in development of numerical simulation software,
 #  including CAD/CAM/CAE, AEC and GIS, as well as PDM applications.
-#  The Technology exists from the mid 1990-s and has already been used
-#  by numerous commercial clients belonging to different domains − from software edition to heavy industry.
-#  
-#  The platform is provided by the Company bearing the same name − OPEN CASCADE SAS 
-#  For its clients the Company offers custom development and technical support services.
-#  For more information on the Company please visit www.opencascade.com
-#  
+#
 #  ***This effort is in no way connected to OpenCASCADE Company*** 
-
 
 
 You'll need to have the standard developer's tools on Linux.
