--- a/README
+++ b/README
@@ -1,14 +1,14 @@
 #  How to use OpenCASCADE Technology on Android 
 # 
-#  Open CASCADE Technology is a software development platform 
-#  freely available in open source. 
+#  Open CASCADE Technology is a software development platform,
+#  freely available in open source.
 #  It includes components for 3D surface and solid modeling, visualization, 
 #  data exchange and rapid application development.
-#  Open CASCADE Technology can be best applied in development of numerical simulation software,
+#  Open CASCADE Technology can be best applied in development 
+#  of numerical simulation software, 
 #  including CAD/CAM/CAE, AEC and GIS, as well as PDM applications.
 #
 #  ***This effort is in no way connected to OpenCASCADE Company*** 
-
 
 You'll need to have the standard developer's tools on Linux.
 (including Java SE Development Kit)
