--- a/README
+++ b/README
@@ -7,9 +7,12 @@
 #  Open CASCADE Technology can be best applied in development 
 #  of numerical simulation software, 
 #  including CAD/CAM/CAE, AEC and GIS, as well as PDM applications.
-#
-#  ***This effort is in no way connected to OpenCASCADE Company*** 
 
+ 
+   ***This effort is in no way connected to OpenCASCADE Company*** 
+      and all code is in Public Domain (free as the air you breathe)
+      
+    
 You'll need to have the standard developer's tools on Linux.
 (including Java SE Development Kit)
 
